tests/requests/invalid/003.py
from restkit.errors import InvalidRequestMethod
request = InvalidRequestMethod